@@ -23,19 +23,14 @@ import java.util.concurrent.Executors;
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @AllArgsConstructor(access = AccessLevel.PROTECTED)
 public abstract class AbstractAuditTrailManager implements AuditTrailManager, DisposableBean {
-    /**
-     * Save records asynchronously.
-     */
     protected boolean asynchronous;
 
-    private final ExecutorService executorService = Executors.newSingleThreadExecutor(
-        r -> new Thread(r, "AuditTrailManagerThread"));
-
+    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
 
     @Override
     public void record(final AuditActionContext audit) {
         if (this.asynchronous) {
-            this.executorService.execute(() -> saveAuditRecord(audit));
+            executorService.execute(() -> saveAuditRecord(audit));
         } else {
             saveAuditRecord(audit);
         }
@@ -43,13 +38,8 @@ public abstract class AbstractAuditTrailManager implements AuditTrailManager, Di
 
     @Override
     public void destroy() {
-        this.executorService.shutdown();
+        executorService.shutdown();
     }
 
-    /**
-     * Actual audit record save method.
-     *
-     * @param audit Audit record to be saved.
-     */
     protected abstract void saveAuditRecord(AuditActionContext audit);
 }
